--- a/services.html
+++ b/services.html
@@ -40,7 +40,7 @@
       </script>
     <header class="bg-dark text-white">
         <div class="container py-3 d-flex justify-content-between align-items-center">
-            <h1 class="m-0 fs-4">Volleyball World</h1>
+            <h1 class="m-0 fs-4">VolleyNet</h1>
             <nav class="d-none d-md-block">
                 <ul class="list-inline mb-0">
                     <li class="list-inline-item"><a href="index.html" class="text-white text-decoration-none">Home</a></li>
