--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Recent highlights</h5>
                             <p class="card-text">Catch up on the latest Milano Vs Perugia match.</p>
-                            <a href="https://www.youtube.com/watch?v=tEihnv4bKVI" class="btn btn-primary">Watch Now</a>
+                            <a href="https://www.youtube.com/watch?v=tEihnv4bKVI" target"=_blank" class="btn btn-primary">Watch Now</a>
                         </div>
                     </div>
                 </div>
